manifest/libros-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libros-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libros-rest
  template:
    metadata:
      labels:
        app: libros-rest
    spec:
      containers:
        - name: libros-dockercontainer
          image: arkhamax/cloud-libros-service:v1.0
          ports:
            - containerPort: 80
          env:<br>
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  name: libros-configmap
                  key: mongo_uri
            - name: MONGO_AUTH
              valueFrom:
                configMapKeyRef:
                  name: libros-configmap
                  key: mongo_auth
            - name: MONGO_PORT
              valueFrom:
                configMapKeyRef:
                  name: libros-configmap
                  key: mongo_port
            - name: TOMCAT_PORT
              valueFrom:
                configMapKeyRef:
                  name: libros-configmap
                  key: tomcat_port
