manifest/libros-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libros-service
spec:
  selector:
    app: libros-rest
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: portapp
      protocol: TCP
      port: 8084
      targetPort: 8084
    - name: mongoatlas
      protocol: TCP
      port: 27017
      targetPort: 27017
