manifest/libros-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libros-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/libros
            pathType: Prefix
            backend:
              service:
                name: web80
                port:
                  number: 80
            backend:
              service:
                name: libros-service
                port:
                  number: 8084
